[dependencies]
anyhow = "1.0.99"
colored = "3.0.0"
env_logger = "0.11.8"
futures = "0.3.31"
log = "0.4.28"
rand = "0.9.2"
reqwest = "0.12.23"
serde_json = "1.0.143"
toml = "0.9.5"

[dependencies.clap]
features = ["derive"]
version = "4.5.45"

[dependencies.serde]
features = ["derive"]
version = "1.0.219"

[dependencies.tokio]
features = ["rt", "macros", "rt-multi-thread"]
version = "1.47.1"

[package]
authors = ["Nobel von IT"]
categories = ["command-line-utilities", "config"]
description = "DEPendency Initialization manager"
edition = "2024"
keywords = ["manager", "dependencies", "projects"]
license = "MIT"
name = "depi"
repository = "https://github.com/nobel-von-it/depi.git"
version = "0.1.0"
